--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,79 +1,153 @@
 /* ESTILOS GENERALES */
 
 /*Google Fonts Poppins*/
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700&display=swap');
-/* font-family: 'Poppins', sans-serif;*/
+/* @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700&display=swap');
+ *//* font-family: 'Poppins', sans-serif;*/
 
 /*Google Fonts Monserrat*/
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700&display=swap');
-/* font-family: 'Montserrat', sans-serif;*/
+/* @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700&display=swap');
+ *//* font-family: 'Montserrat', sans-serif;*/
 
+ @charset "UTF-8";
 
 /* COLORES */
 :root{
-  --green-color-primary: #4abf2a;
+  --bs-font-sans-serif: system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  --bs-font-monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+  /* --bs-blue: #0d6efd;
+  --bs-indigo: #6610f2;
+  --bs-purple: #6f42c1;
+  --bs-pink: #d63384;
+  --bs-red: #dc3545;
+  --bs-orange: #fd7e14;
+  --bs-yellow: #ffc107;
+  --bs-green: #198754;
+  --bs-teal: #20c997;
+  --bs-cyan: #0dcaf0;
+  --bs-white: #fff;
+  --bs-gray: #6c757d;
+  --bs-gray-dark: #343a40;
+  --bs-primary: #0d6efd;
+  --bs-secondary: #6c757d;
+  --bs-success: #198754;
+  --bs-info: #0dcaf0;
+  --bs-warning: #ffc107;
+  --bs-danger: #dc3545;
+  --bs-light: #f8f9fa;
+  --bs-dark: #212529;
+  --bs-font-sans-serif: system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  --bs-font-monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+  --bs-gradient: linear-gradient(180deg, rgba(255, 255, 255, 0.15), rgba(255, 255, 255, 0)); */
+  /* COLORES PERSONALIZADOS */
   --grey-text: #999999;
+  --green-navlink: #1C4F44;
   --background-color: #FAF3E8;
   --background-btn-primary: #004036;
+  --green-color-primary: #D5F5CC;}
+body{
+   margin: 0;
+   font-family: 'Poppins', sans-serif;  font-weight: 400;
+  line-height: 1.5;
+  color: #212529;
+  background-color: var(--background-color);}
+/* ESTILOS DE TEXTOS */
+
+h6, .h6, h5, .h5, h4, .h4, h3, .h3, h2, .h2, h1, .h1 {
+  margin-top: 0;
+  margin-bottom: 0.5rem;
+  font-weight: 500;
+  line-height: 1.2;
 }
 
-.container {
-  padding-top: 20px;
+h1, .h1 {
+  font-size: calc(1.375rem + 1.5vw);
+}
+@media (min-width: 1200px) {
+  h1, .h1 {
+    font-size: 2.5rem;
+  }
 }
 
-nav {
-  height: 50px;
+h2, .h2 {
+  font-size: calc(1.325rem + 0.9vw);
+}
+@media (min-width: 1200px) {
+  h2, .h2 {
+    font-size: 2rem;
+  }
 }
 
-.titulo {
-  display: flex;
-  justify-content: center;
-  font-size: 10vh;
-  color: #01261c;
-  padding-top: 55px;
+h3, .h3 {
+  font-size: calc(1.3rem + 0.6vw);
+}
+@media (min-width: 1200px) {
+  h3, .h3 {
+    font-size: 1.75rem;
+  }
 }
 
-.pad-bt {
-  padding-top: 10px;
-  padding-bottom: 5px;
+h4, .h4 {
+  font-size: calc(1.275rem + 0.3vw);
+}
+@media (min-width: 1200px) {
+  h4, .h4 {
+    font-size: 1.5rem;
+  }
 }
 
-.white {
-  color: white;
+h5, .h5 {
+  font-size: 1.25rem;
 }
 
-.bg-nav {
-  background-color: white;
+h6, .h6 {
+  font-size: 1rem;
 }
 
-.linea {
-  background-color: #4abf2a !important;
-  height: 20px;
+p {
+  margin-top: 0;
+  margin-bottom: 1rem;
+}
+/* ESTILOS LISTAS  */
+
+ol,
+ul {
+  padding-left: 2rem;
 }
 
-.navG {
-  color: #17483e !important;
+ol,
+ul,
+dl {
+  margin-top: 0;
+  margin-bottom: 1rem;
 }
 
-.navGL {
-  color: #087435 !important;
+a{
+  color: rgba(255, 255, 255, alpha);
+}
+ol ol,
+ul ul,
+ol ul,
+ul ol {
+  margin-bottom: 0;
 }
 
-.t {
-  color: #57bba0 !important;
+/* ESTILOS ENLACES a */
+
+a {
+  color: #0d6efd;
+  text-decoration: underline;
+}
+a:hover {
+  color: #0a58ca;
 }
 
-.navbar-toggler-icon {
-  /* background-color: #01261c; */
-  background-image: url("../img/menu-hamburguesa.png");
-  max-height: 30px !important;
+a:not([href]):not([class]), a:not([href]):not([class]):hover {
+  color: inherit;
+  text-decoration: none;
 }
 
-.bg {
-  background-color: #d5f6cc !important;
-  min-height: 65px;
-}
 
-.bgitems {
-  background-color: #d5f6cc !important;
+/* ESTILOS BARRA DE NAVEGACIÓN */
+.bg-nav{
+  background-color: var(--green-color-primary);
 }
