--- a/assets/css/landingPage.css
+++ b/assets/css/landingPage.css
@@ -61,6 +61,17 @@
 .iconCert{
   color: var(--color-logo-gitlab);
 }
+a{
+  text-decoration: none;
+  color: var(--black-color);
+}
+.sectionCert .title5:hover{
+  text-decoration: underline 1px var(--orange-color);
+  color: var(--color-logo-gitlab);
+}
+.text-orange{
+  color: var(--green-color-hover-link)
+}
 /* ESTILOS FOTO BRAQUETES */
 
 .profilePic{
@@ -141,7 +152,13 @@
   text-decoration: underline 2px var(--orange-color);
 
 }
-
+.link-contact{
+  margin: 15px 0;
+}
+.link-contact:hover{
+  font-weight: 600;
+  color: var(--color-logo-gitlab);
+}
 /* ESTILOS LINKS NAVBAR */
 .navbar{
     text-transform: uppercase;
@@ -237,9 +254,7 @@
   cursor: pointer;
   border-top: solid 2px var(--black-color);
   border-bottom: solid 2px var(--black-color);
-  content-visibility: hidden;
 }
-.sectionCert:hover{
-  visibility: visible;
+.sectionCert:hover  {
   background-color: var(--grey-border-btnsocial);
 }
