Sección de Skills y Estilos para cards Skill

--- a/assets/css/landingPage.css
+++ b/assets/css/landingPage.css
@@ -76,8 +76,11 @@
   line-height: 2; 
 }
 .title4{
-  color: var(--green-color-text);
+  color: var(--green-primary2);
   font-weight: 700;
+  letter-spacing: 5px;
+  text-transform: uppercase;
+  font-size: 1.6rem;
 }
 .iconCert{
   color: var(--color-logo-gitlab);
@@ -167,6 +170,16 @@ a{
 .btn-terciario:hover{
   color: var(--orange-color);
   text-decoration: underline 2px var(--orange-color);
+
+}
+.text-link{
+  color: var(--green-primary2);
+  font-weight: 600;
+
+}
+.text-link:hover{
+  text-decoration: underline;
+  color: var(--green-bg1-btn);
 
 }
 .link-contact{
@@ -283,6 +296,41 @@ a{
 }
 .sectionCert:hover  {
   background-color: var(--grey-border-btnsocial);
+}
+/* ESTILOS CARDS DE SKILLS */
+.card-skill{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: none;
+  width: 14rem;
+  height: 14rem;
+  text-transform: uppercase;
+  color: var(--grey-color-text);
+  border-radius: 5px;
+  background-color: #f7f7f7;
+  filter: grayscale(5);
+}
+.card-skill>span{
+  font-weight: 700;
+  line-height: 1.3;
+  padding-top: 15px;
+
+
+}
+.card-skill>img{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 85px;
+  vertical-align: middle;
+}
+.card-skill:hover{
+  filter: grayscale(0);
+  cursor: pointer;
+  filter: drop-shadow( 14px 10px 10px  #2f93f03d);
+  color: var(--color-logo-github);
+  background-color: #2f92f03d ;
 }
 /* ESTILOS FOOTER */
 footer{
