--- a/assets/css/landingPage.css
+++ b/assets/css/landingPage.css
@@ -307,10 +307,9 @@ a{
 .card-skill{
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: space-between;
   border: none;
-  width: 10rem;
-  height: 10rem;
+  width: 100%;
   text-transform: uppercase;
   color: var(--grey-color-text);
   border-radius: 5px;
@@ -328,7 +327,7 @@ a{
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 85px;
+  height: 48px;
   vertical-align: middle;
 }
 .card-skill:hover{
@@ -346,8 +345,8 @@ figure{
 	margin: 10px 1%;
 	min-width: 100%;
 	max-width: 100%;
-	max-height: auto;
-	width: 48%;
+	max-height: 50vh;
+	width: 100%;
 	background: var(--green-dark2);
 	text-align: center;
 	cursor: pointer;
@@ -360,7 +359,7 @@ figure img{
 	opacity: 0.8;
 }
 figure figcaption{
-  padding: 2em;
+  padding: 2%;
 	color: #fff;
 	text-transform: uppercase;
 	font-size: 1.25em;
@@ -397,7 +396,7 @@ figure h6 span {
 
  figure h6,
  figure p {
-	margin: 0;
+	margin:0 2% ;
 }
 
 figure p {
@@ -425,7 +424,7 @@ figure.effect-zoe p.icon-links a {
 	color: #3c4a50;
   font-weight: 700;
 	font-size: 1.4em;
-  padding:  1.5rem;
+  padding:  1%;
 }
 
 figure.effect-zoe:hover p.icon-links a:hover,
@@ -455,8 +454,7 @@ figure.effect-zoe p.icon-links a {
 }
 
 figure.effect-zoe p.icon-links a i::before {
-	display: inline-flex;
-	padding: 8px 10px;
+	display: inline-block;
 	/* font-family: 'feathericons';
 	speak: none; */
 	-webkit-font-smoothing: antialiased;
