Correciones bg-welcome y mejora de Stats Developer

--- a/assets/css/stylelp.css
+++ b/assets/css/stylelp.css
@@ -44,7 +44,7 @@
 .bg-welcome{
     background-image: url("/assets/img/bg2.jpg");
     background-repeat: no-repeat;
-    background-position:top center;
+    background-position: center;
     background-size: cover;
 }
 .bg-w{
