--- a/assets/css/stylelp.css
+++ b/assets/css/stylelp.css
@@ -39,7 +39,6 @@
       
   }
 *{
-    overflow: -moz-hidden-unscrollable;
     font-family: 'Rubik', sans-serif;
     margin: 0;
     padding: 0;
@@ -169,12 +168,12 @@ figure figcaption span{
     font-size: .8rem;
     color: var(--grey-light);
 }
-.detail-work .col-10 p{
+.detail-work .col-10>p{
     text-transform: uppercase;
     font-size: .8rem;
     color: var(--grey-light);
 }
-.detail-work .col-10 h5{
+.detail-work .col-10>h5{
     text-transform: capitalize;
     font-weight: 200;
     font-size: 1.5rem;
