Limpieza y Optimización HTML Mis Skills

--- a/assets/css/stylelp.css
+++ b/assets/css/stylelp.css
@@ -297,9 +297,8 @@ figure figcaption span{
 .skill .card{
     display: flex;
     align-items: center;
-    justify-content: space-around;
+    justify-content: space-between;
     border: none;
-    width: 10rem;
     height: 10rem;
     text-transform: uppercase;
     color: var(--grey-color-text);
